--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-gesture-handler": "~2.8.0",
+    "lottie-react-native": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
